LDEV-3374 backport dbinfo improvements
type=tables filter="TABLE"
https://luceeserver.atlassian.net/browse/LDEV-3378

dbinfo type="columns_minimal"
https://luceeserver.atlassian.net/browse/LDEV-3374

allow table wildcards for dbinfo type="columns"
https://luceeserver.atlassian.net/browse/LDEV-3373